[gd_scene load_steps=194 format=2]

[ext_resource path="res://PlayerScript.gd" type="Script" id=1]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0000.png" type="Texture" id=2]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0001.png" type="Texture" id=3]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0002.png" type="Texture" id=4]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0003.png" type="Texture" id=5]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0004.png" type="Texture" id=6]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0005.png" type="Texture" id=7]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0006.png" type="Texture" id=8]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0007.png" type="Texture" id=9]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0008.png" type="Texture" id=10]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0009.png" type="Texture" id=11]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0010.png" type="Texture" id=12]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0011.png" type="Texture" id=13]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0012.png" type="Texture" id=14]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0013.png" type="Texture" id=15]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0014.png" type="Texture" id=16]
[ext_resource path="res://TExtures/Rybka/RybkaMirror/frame0015.png" type="Texture" id=17]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0000.png" type="Texture" id=18]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0001.png" type="Texture" id=19]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0002.png" type="Texture" id=20]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0003.png" type="Texture" id=21]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0004.png" type="Texture" id=22]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0005.png" type="Texture" id=23]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0006.png" type="Texture" id=24]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0007.png" type="Texture" id=25]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0008.png" type="Texture" id=26]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0009.png" type="Texture" id=27]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0010.png" type="Texture" id=28]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0011.png" type="Texture" id=29]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0012.png" type="Texture" id=30]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0013.png" type="Texture" id=31]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0014.png" type="Texture" id=32]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0015.png" type="Texture" id=33]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0016.png" type="Texture" id=34]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0017.png" type="Texture" id=35]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0018.png" type="Texture" id=36]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0019.png" type="Texture" id=37]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0020.png" type="Texture" id=38]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0021.png" type="Texture" id=39]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0022.png" type="Texture" id=40]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0023.png" type="Texture" id=41]
[ext_resource path="res://TExtures/Rybka/DieMirror/frame0024.png" type="Texture" id=42]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0000.png" type="Texture" id=43]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0001.png" type="Texture" id=44]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0002.png" type="Texture" id=45]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0003.png" type="Texture" id=46]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0004.png" type="Texture" id=47]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0005.png" type="Texture" id=48]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0006.png" type="Texture" id=49]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0007.png" type="Texture" id=50]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0008.png" type="Texture" id=51]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0009.png" type="Texture" id=52]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0010.png" type="Texture" id=53]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0011.png" type="Texture" id=54]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0012.png" type="Texture" id=55]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0013.png" type="Texture" id=56]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0014.png" type="Texture" id=57]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0015.png" type="Texture" id=58]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0016.png" type="Texture" id=59]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0017.png" type="Texture" id=60]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0018.png" type="Texture" id=61]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0019.png" type="Texture" id=62]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0020.png" type="Texture" id=63]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0021.png" type="Texture" id=64]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0022.png" type="Texture" id=65]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0023.png" type="Texture" id=66]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0024.png" type="Texture" id=67]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0025.png" type="Texture" id=68]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0026.png" type="Texture" id=69]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0027.png" type="Texture" id=70]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0028.png" type="Texture" id=71]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0029.png" type="Texture" id=72]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0030.png" type="Texture" id=73]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0031.png" type="Texture" id=74]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0032.png" type="Texture" id=75]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0033.png" type="Texture" id=76]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0034.png" type="Texture" id=77]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0035.png" type="Texture" id=78]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0036.png" type="Texture" id=79]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0037.png" type="Texture" id=80]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0038.png" type="Texture" id=81]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0039.png" type="Texture" id=82]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0040.png" type="Texture" id=83]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0041.png" type="Texture" id=84]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0042.png" type="Texture" id=85]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0043.png" type="Texture" id=86]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0044.png" type="Texture" id=87]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0045.png" type="Texture" id=88]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0046.png" type="Texture" id=89]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0047.png" type="Texture" id=90]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0048.png" type="Texture" id=91]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0049.png" type="Texture" id=92]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0050.png" type="Texture" id=93]
[ext_resource path="res://TExtures/Rybka/IdleNormal/frame0051.png" type="Texture" id=94]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0000.png" type="Texture" id=95]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0001.png" type="Texture" id=96]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0002.png" type="Texture" id=97]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0003.png" type="Texture" id=98]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0004.png" type="Texture" id=99]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0005.png" type="Texture" id=100]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0006.png" type="Texture" id=101]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0007.png" type="Texture" id=102]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0008.png" type="Texture" id=103]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0009.png" type="Texture" id=104]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0010.png" type="Texture" id=105]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0011.png" type="Texture" id=106]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0012.png" type="Texture" id=107]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0013.png" type="Texture" id=108]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0014.png" type="Texture" id=109]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0015.png" type="Texture" id=110]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0016.png" type="Texture" id=111]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0017.png" type="Texture" id=112]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0018.png" type="Texture" id=113]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0019.png" type="Texture" id=114]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0020.png" type="Texture" id=115]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0021.png" type="Texture" id=116]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0022.png" type="Texture" id=117]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0023.png" type="Texture" id=118]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0024.png" type="Texture" id=119]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0025.png" type="Texture" id=120]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0026.png" type="Texture" id=121]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0027.png" type="Texture" id=122]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0028.png" type="Texture" id=123]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0029.png" type="Texture" id=124]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0030.png" type="Texture" id=125]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0031.png" type="Texture" id=126]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0032.png" type="Texture" id=127]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0033.png" type="Texture" id=128]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0034.png" type="Texture" id=129]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0035.png" type="Texture" id=130]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0036.png" type="Texture" id=131]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0037.png" type="Texture" id=132]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0038.png" type="Texture" id=133]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0039.png" type="Texture" id=134]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0040.png" type="Texture" id=135]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0041.png" type="Texture" id=136]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0042.png" type="Texture" id=137]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0043.png" type="Texture" id=138]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0044.png" type="Texture" id=139]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0045.png" type="Texture" id=140]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0046.png" type="Texture" id=141]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0047.png" type="Texture" id=142]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0048.png" type="Texture" id=143]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0049.png" type="Texture" id=144]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0050.png" type="Texture" id=145]
[ext_resource path="res://TExtures/Rybka/IdleMirror/frame0051.png" type="Texture" id=146]
[ext_resource path="res://TExtures/Rybka/Die/frame0000.png" type="Texture" id=147]
[ext_resource path="res://TExtures/Rybka/Die/frame0001.png" type="Texture" id=148]
[ext_resource path="res://TExtures/Rybka/Die/frame0002.png" type="Texture" id=149]
[ext_resource path="res://TExtures/Rybka/Die/frame0003.png" type="Texture" id=150]
[ext_resource path="res://TExtures/Rybka/Die/frame0004.png" type="Texture" id=151]
[ext_resource path="res://TExtures/Rybka/Die/frame0005.png" type="Texture" id=152]
[ext_resource path="res://TExtures/Rybka/Die/frame0006.png" type="Texture" id=153]
[ext_resource path="res://TExtures/Rybka/Die/frame0007.png" type="Texture" id=154]
[ext_resource path="res://TExtures/Rybka/Die/frame0008.png" type="Texture" id=155]
[ext_resource path="res://TExtures/Rybka/Die/frame0009.png" type="Texture" id=156]
[ext_resource path="res://TExtures/Rybka/Die/frame0010.png" type="Texture" id=157]
[ext_resource path="res://TExtures/Rybka/Die/frame0011.png" type="Texture" id=158]
[ext_resource path="res://TExtures/Rybka/Die/frame0012.png" type="Texture" id=159]
[ext_resource path="res://TExtures/Rybka/Die/frame0013.png" type="Texture" id=160]
[ext_resource path="res://TExtures/Rybka/Die/frame0014.png" type="Texture" id=161]
[ext_resource path="res://TExtures/Rybka/Die/frame0015.png" type="Texture" id=162]
[ext_resource path="res://TExtures/Rybka/Die/frame0016.png" type="Texture" id=163]
[ext_resource path="res://TExtures/Rybka/Die/frame0017.png" type="Texture" id=164]
[ext_resource path="res://TExtures/Rybka/Die/frame0018.png" type="Texture" id=165]
[ext_resource path="res://TExtures/Rybka/Die/frame0019.png" type="Texture" id=166]
[ext_resource path="res://TExtures/Rybka/Die/frame0020.png" type="Texture" id=167]
[ext_resource path="res://TExtures/Rybka/Die/frame0021.png" type="Texture" id=168]
[ext_resource path="res://TExtures/Rybka/Die/frame0022.png" type="Texture" id=169]
[ext_resource path="res://TExtures/Rybka/Die/frame0023.png" type="Texture" id=170]
[ext_resource path="res://TExtures/Rybka/Die/frame0024.png" type="Texture" id=171]
[ext_resource path="res://TExtures/CornerCircle.png" type="Texture" id=172]
[ext_resource path="res://TExtures/HalfCircle.png" type="Texture" id=173]
[ext_resource path="res://TExtures/CornerCircleMirror.png" type="Texture" id=174]
[ext_resource path="res://TExtures/HalfCircleMirror.png" type="Texture" id=175]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0000.png" type="Texture" id=176]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0001.png" type="Texture" id=177]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0002.png" type="Texture" id=178]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0003.png" type="Texture" id=179]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0004.png" type="Texture" id=180]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0005.png" type="Texture" id=181]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0006.png" type="Texture" id=182]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0007.png" type="Texture" id=183]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0008.png" type="Texture" id=184]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0009.png" type="Texture" id=185]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0010.png" type="Texture" id=186]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0011.png" type="Texture" id=187]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0012.png" type="Texture" id=188]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0013.png" type="Texture" id=189]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0014.png" type="Texture" id=190]
[ext_resource path="res://TExtures/Rybka/RybkaNormal/frame0015.png" type="Texture" id=191]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Mirror",
"speed": 12.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": false,
"name": "DeathMirror",
"speed": 12.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ) ],
"loop": true,
"name": "IdleNormal",
"speed": 12.0
}, {
"frames": [ ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 137 ), ExtResource( 138 ), ExtResource( 139 ), ExtResource( 140 ), ExtResource( 141 ), ExtResource( 142 ), ExtResource( 143 ), ExtResource( 144 ), ExtResource( 145 ), ExtResource( 146 ) ],
"loop": true,
"name": "IdleMirror",
"speed": 12.0
}, {
"frames": [ ExtResource( 147 ), ExtResource( 148 ), ExtResource( 149 ), ExtResource( 150 ), ExtResource( 151 ), ExtResource( 152 ), ExtResource( 153 ), ExtResource( 154 ), ExtResource( 155 ), ExtResource( 156 ), ExtResource( 157 ), ExtResource( 158 ), ExtResource( 159 ), ExtResource( 160 ), ExtResource( 161 ), ExtResource( 162 ), ExtResource( 163 ), ExtResource( 164 ), ExtResource( 165 ), ExtResource( 166 ), ExtResource( 167 ), ExtResource( 168 ), ExtResource( 169 ), ExtResource( 170 ), ExtResource( 171 ) ],
"loop": false,
"name": "DeathNormal",
"speed": 12.0
}, {
"frames": [ ExtResource( 172 ) ],
"loop": true,
"name": "IdleCorner",
"speed": 12.0
}, {
"frames": [ ExtResource( 173 ) ],
"loop": true,
"name": "IdleWall",
"speed": 12.0
}, {
"frames": [ ExtResource( 174 ) ],
"loop": true,
"name": "IdleCornerMirror",
"speed": 12.0
}, {
"frames": [ ExtResource( 175 ) ],
"loop": true,
"name": "IdleWallMirror",
"speed": 12.0
}, {
"frames": [ ExtResource( 173 ), ExtResource( 173 ), ExtResource( 175 ), ExtResource( 173 ), ExtResource( 173 ), ExtResource( 175 ) ],
"loop": true,
"name": "MoveWall",
"speed": 12.0
}, {
"frames": [ ExtResource( 176 ), ExtResource( 177 ), ExtResource( 178 ), ExtResource( 179 ), ExtResource( 180 ), ExtResource( 181 ), ExtResource( 182 ), ExtResource( 183 ), ExtResource( 184 ), ExtResource( 185 ), ExtResource( 186 ), ExtResource( 187 ), ExtResource( 188 ), ExtResource( 189 ), ExtResource( 190 ), ExtResource( 191 ) ],
"loop": true,
"name": "Normal",
"speed": 12.0
}, {
"frames": [ ExtResource( 175 ), ExtResource( 175 ), ExtResource( 173 ), ExtResource( 175 ), ExtResource( 175 ), ExtResource( 173 ) ],
"loop": true,
"name": "MoveWallMirror",
"speed": 12.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 32.0

[node name="RigidBody" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Applied Forces", "Collision", "Linear", "Material", "Pickable", "Region", "Transform", "Visibility", "Z Index", "collision" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "MoveWallMirror"
frame = 5
playing = true
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Pickable", "Transform", "Z Index" ]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
space_override = 1
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Pickable", "Transform" ]

[node name="Collision2" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="RayCastDown" type="RayCast2D" parent="." index="3"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 36 )
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="." index="4"]

rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 36 )
collision_mask = 2
_sections_unfolded = [ "Transform" ]

[node name="RayCastUp" type="RayCast2D" parent="." index="5"]

rotation = 3.14159
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 36 )
collision_mask = 2
_sections_unfolded = [ "Transform" ]

[node name="RayCastRight" type="RayCast2D" parent="." index="6"]

rotation = 4.71239
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 36 )
collision_mask = 2
_sections_unfolded = [ "Transform" ]


